# DTEAM-django-practical-test

./: .env.sample  .gitignore  .prod.evn.sample  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
CVProject/: settings.py  urls.py
audit/: urls.py
audit/migrations/: 0001_initial.py
base/: models.py
base/templates/base/: _header.html  base.html
core/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
core/api/: serializers.py  urls.py
core/templates/core/: curriculum-vitae-detail.html
docker/django/: Dockerfile  entrypoint
src/: cv_fixture.json  pyproject.toml
src/CVProject/: celery.py  settings.py  urls.py
src/audit/: middleware.py  models.py  views.py
src/audit/templates/audit/: logs.html
src/audit/tests/: test_middleware.py
src/base/templates/base/: _messages.html  base.html
src/core/: constants.py  models.py  tasks.py  urls.py  views.py
src/core/api/: views.py
src/core/api/tests/: test_views.py
src/core/migrations/: 0001_initial.py  0002_alter_project_name_alter_skill_name.py
src/core/services/: deepl_translate.py
src/core/templates/core/: curriculum-vitae-detail-pdf.html  curriculum-vitae-detail.html  curriculum-vitae-list.html  settings_page.html
src/core/tests/: test_views.py
