[project]
name = "cvproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii-Boiko-Planeks",email = "andrii.boiko@planeks.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "xhtml2pdf; python_version < \"3.13\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
