[project]
name = "cvproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii-Boiko-Planeks",email = "andrii.boiko@planeks.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "xhtml2pdf; python_version < \"3.13\"",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "watchgod (>=0.8.2,<0.9.0)",
    "redis (>=6.2.0,<7.0.0)",
    "openai (>=1.82.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
